--- a/css/estilo_mobile.css
+++ b/css/estilo_mobile.css
@@ -153,7 +153,8 @@ main {
 .msg-erro {
   color: var(--red);
   display: none;
-  font-size: 0.80rem;
+  font-size: 0.83rem;
+  font-weight: bold;
   margin-top: 5px;
 }
 
