--- a/css/estilo_mobile.css
+++ b/css/estilo_mobile.css
@@ -10,6 +10,7 @@
 
 body {
   /* background: url("../design/mobile-design.jpg") 0 0 / 100% auto no-repeat; */
+  background: var(--white);
   font-size: 18px;
 }
 
